--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^19.0.0",
     "react-flags-select": "^2.4.0",
     "react-i18next": "^15.4.1",
+    "react-icons": "^5.5.0",
     "tailwindcss": "^4.0.12"
   },
   "devDependencies": {
