--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "jomaroru-front",
   "private": true,
-  "version": "0.3.8",
+  "version": "1.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -20,6 +20,7 @@
     "react-flags-select": "^2.4.0",
     "react-i18next": "^15.4.1",
     "react-icons": "^5.5.0",
+    "react-toastify": "^11.0.5",
     "tailwindcss": "^4.0.12"
   },
   "devDependencies": {
